erDiagram
    user ||--o{ session : "has"
    user ||--o{ account : "has"
    user ||--o| session : "impersonates"
    user ||--o{ hunts : "organizes"
    hunts ||--o{ hunt_points : "has"
    hunts ||--o| hunt_rewards : "has"
    hunt_points ||--o| quiz_questions : "has"

    user {
        string id PK
        string name
        string email
        boolean emailVerified
        string image
        string bio
        string role
        boolean banned
        string banReason
        bigint banExpires
        timestamp createdAt
        timestamp updatedAt
    }

    session {
        string id PK
        timestamp expiresAt
        string token
        timestamp createdAt
        timestamp updatedAt
        string ipAddress
        string userAgent
        string userId FK
        string impersonatedBy FK
    }

    account {
        string id PK
        string accountId
        string providerId
        string userId FK
        string accessToken
        string refreshToken
        string idToken
        timestamp accessTokenExpiresAt
        timestamp refreshTokenExpiresAt
        string scope
        string password
        timestamp createdAt
        timestamp updatedAt
    }

    verification {
        string id PK
        string identifier
        string value
        timestamp expiresAt
        timestamp createdAt
        timestamp updatedAt
    }

    hunts {
        string id PK
        string title
        string description
        hunt_status status
        string organizerId FK
        timestamp createdAt
        timestamp updatedAt
    }

    hunt_points {
        string id PK
        string huntId FK
        float8 latitude
        float8 longitude
        string gameType
        timestamp createdAt
    }

    hunt_rewards {
        string id PK
        string huntId FK
        integer topX
        string promoCode
    }

    quiz_questions {
        string id PK
        string huntPointId FK
        string question
        jsonb answers
        integer correctAnswerIndex
    }
